[tool.poetry]
name = "pytest-official-example"
version = "0.1.0"
description = ""
authors = ["test"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pytest = "^7.4.0"
tox = "^4.6.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
